<resources>
    <string name="app_name">EatHere</string>
    <string name="frag_restaurant">Restaurant</string>
    <string name="frag_restaurant_search">Search&#8230;</string>
    <string name="frag_restaurant_empty_list">Type a restaurant name to start a search&#8230;</string>
    <string name="frag_recommend">Recommend</string>
    <string name="frag_recommend_empty_list">Please sign in to see our recommendation</string>
    <string name="frag_me">Me</string>
    <string name="frag_me_about">About</string>
    <string name="frag_me_sign_in">Sign In</string>
    <string name="frag_me_sign_out">Sign Out</string>
    <string name="frag_me_username">User</string>
    <string name="title_activity_info">EatHere</string>
    <string name="title_activity_about">About</string>
    <string name="activity_about_title">EatHere</string>
    <string name="activity_about_content">App to search and recommend restaurants.</string>
    <string name="activity_about_credits">Created by: Xucheng Chen, Haikuo Liu, Jisong Liu, Shuo Wang @ Columbia University</string>
    <string name="title_activity_sign_in">Sign In</string>
    <string name="activity_sign_in_sign_in">Sign In</string>
    <string name="activity_sign_in_account_creation_prompt">Don\'t have an account?</string>
    <string name="activity_sign_in_account_creation">Create One</string>
    <string name="activity_sign_in_email">Email</string>
    <string name="activity_sign_in_password">Password</string>
    <string name="title_activity_sign_up">Sign Up</string>
    <string name="activity_sign_up_username">Username</string>
    <string name="activity_sign_up_email">Email</string>
    <string name="activity_sign_up_password">Password</string>
    <string name="activity_sign_up_sign_up">Sign Up</string>
    <string name="google_map_service_not_available">Google Map Service is not available</string>
    <string name="google_map_invalid_arguments_used">Google Map: Invalid arguments</string>
    <string name="activity_permissions_help">Permissions Required :)</string>
    <string name="activity_permissions_help_message">EatHere needs access to your location (for recommendation and search) and camera (for your user picture)</string>
    <string name="activity_permissions_quit">Quit Application</string>
    <string name="activity_permissions_settings">Set permissions</string>
</resources>
