<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.eathere.cc.eathere.MeFragment"
    android:background="@color/windowBackground">

    <ImageView
        android:id="@+id/frag_me_user_avatar"
        android:layout_width="100dp"
        android:layout_height="100dp"
        android:layout_margin="12dp"
        android:layout_centerHorizontal="true"
        android:src="@mipmap/ic_launcher"
        android:scaleType="fitXY" />

    <TextView android:id="@+id/frag_me_user_name"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/frag_me_user_avatar"
        android:layout_marginBottom="12dp"
        android:text="@string/frag_me_username"
        android:textSize="22sp"
        android:textStyle="bold"
        android:textColor="@android:color/black"
        android:layout_centerHorizontal="true" />

    <Button
        android:id="@+id/frag_me_button_login_logout"
        android:layout_width="200dp"
        android:layout_height="wrap_content"
        android:layout_below="@id/frag_me_user_name"
        android:layout_centerHorizontal="true"
        android:layout_margin="12dp"
        android:text="@string/frag_me_sign_in"
        android:textSize="14sp"
        android:textColor="@android:color/white"
        android:background="@drawable/arc_button" />

    <Button
        android:id="@+id/frag_me_button_about"
        android:layout_width="200dp"
        android:layout_height="wrap_content"
        android:layout_below="@id/frag_me_button_login_logout"
        android:layout_centerHorizontal="true"
        android:layout_margin="12dp"
        android:text="@string/frag_me_about"
        android:textSize="14sp"
        android:textColor="@android:color/white"
        android:background="@drawable/arc_button" />

</RelativeLayout>